# vadim_docs

./: .gitignore  README.md  pyproject.toml
src/vadim_docs/: cli.py  services.py  settings.py
